# lib/api-spec/openapi.yaml
@@ -984,6 +984,8 @@ components:
           nullable: true
         total:
           type: number
+        deposit:
+          type: number
         deliveryId:
           type: integer
           nullable: true
@@ -993,7 +995,7 @@ components:
         note:
           type: string
           nullable: true
-      required: [id, invoiceNo, customerName, date, total]
+      required: [id, invoiceNo, customerName, date, total, deposit]
 
     InvoiceWithItems:
       allOf:
@@ -1013,6 +1015,9 @@ components:
           type: string
         date:
           type: string
+        deposit:
+          type: number
+          nullable: true
         deliveryId:
           type: integer
           nullable: true
